# lumen

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
inc/: lumen.h
src/: main.c
src/core/: CMakeLists.txt  benchmark.h  platform.h
src/core/containers/: cont_da.c  cont_da.h  cont_hm.c  cont_hm.h  cont_kd.h  cont_lfq.h
src/core/hash/: metrohash.h  metrohash64.c  murmurhash.c  murmurhash.h  xxhash.h
src/core/math/: math_bits.h  math_fast.c  math_fast.h  math_hash.c  math_hash.h  math_mat.c  math_mat.h  math_mat3.c  math_mat3.h  math_mat4.c  math_mat4.h  math_rand.c  math_rand.h  math_vec.c  math_vec.h  math_vec3.c  math_vec3.h  math_vec4.c  math_vec4.h
src/core/memory/allocators/: mem_alloc.h  mem_frame.c  mem_frame.h  mem_general.c  mem_pool.c  mem_pool.h  mem_stack.c  mem_stack.h
src/core/schedulers/: job_scheduler.c  job_scheduler.h  lum_scheduler.c  lum_scheduler.h
src/core/threads/: job_queue.c  job_queue.h  job_scheduler.c  job_scheduler.h  lum_thread.c  lum_thread.h  lum_worker.c  lum_worker.h
src/input/: input.c  input.h
src/renderer/: renderer.h
src/renderer/shaders/: triangle.vert
src/renderer/vulkan/: vulkan_renderer.c  vulkan_renderer.h
submodules/stb/: stb_ds.h
tests/: math_mat_tests.c  math_tests.c  math_vec_tests.c  runner.c  test_framework.h
tests/containers/: test_cont_da.c  test_cont_hm.c  test_cont_lfq.c  test_cont_lfq_mt.c
tests/math/: math_mat_tests.c  math_mod_tests.c  math_vec_tests.c
tests/memory/: test_alloc_benchmark.c  test_alloc_frame.c  test_alloc_general.c  test_alloc_pool.c  test_alloc_stack.c
tests/scheduling/: test_job_scheduler.c  test_lum_scheduler.c
